--- a/estabelecimentos.html
+++ b/estabelecimentos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<title>VizRFB</title>
+	<title>VizRFB-Estabelecimentos</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="static/css/dc.css">
 	<link rel="stylesheet" type="text/css" href="static/css/style.css">
@@ -18,7 +18,28 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+	<div class="chart_test" id="Q1">d</div>
+	<div class="chart_test" id="Q11">
+		<div id="Q11_linechart"></div>
+		<table class="table table-hover" id="table_estabs">
+        <thead>
+            <tr class="header">
+                <th>Root CNPJ</th>
+                <th>CNPJ</th>
+                <th>Name</th>
+                <th>Date Start</th>
+                <th>Situation</th>
+                <th>State</th>
+            </tr>
+        </thead>
+    	</table>
+	</div>
+	<div class="chart_test" id="Q2">d</div>
+	<div class="chart_test" id="Q3">d</div>
+	<div class="chart_test" id="id_table">
+		
+    </table>
+	</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
