situação por porte

--- a/estabelecimentos.html
+++ b/estabelecimentos.html
@@ -20,6 +20,7 @@
 <body>
 	<div class="chart_test" id="Q1">d</div>
 	<div class="chart_test" id="Q11">
+
 		<div id="Q11_linechart"></div>
 		<div id="paging">
 	        Showing <span id="begin"></span>-<span id="end"></span> of <span id="size"></span> <span id="totalsize"></span>
@@ -44,7 +45,7 @@
 	<div class="chart_test" id="Q2">d</div>
 	<div class="chart_test" id="Q3">d</div>
 	<div class="chart_test" id="id_table">
-		
+	<div class="chart_test" id="fechados">
     </table>
 	</div>
 
