--- a/estabelecimentos.html
+++ b/estabelecimentos.html
@@ -2,8 +2,10 @@
 <html lang="pt-br">
 <head>
 	<title>VizRFB-Estabelecimentos</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"> -->
+	<link rel="stylesheet" type="text/css" href="static/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="static/css/dc.css">
+	<!-- <link rel="stylesheet" type="text/css" href="https://unpkg.com/dc@4/dist/style/dc.css"> -->
 	<link rel="stylesheet" type="text/css" href="static/css/style.css">
 
 
@@ -11,6 +13,7 @@
 	<script type="text/javascript" src="static/js/d3.js"></script>
 	<script type="text/javascript" src="static/js/crossfilter.min.js"></script>
 	<script type="text/javascript" src="static/js/dc.js"></script>
+	<!-- <script type="text/javascript" src="https://unpkg.com/dc@4/dist/dc.js"></script> -->
 	<script type="text/javascript" src="static/js/main.js"></script>
 	<script type="text/javascript" src="static/js/estabelecimentos.js"></script>
 
@@ -38,6 +41,7 @@
                 <th>Sitação</th>
                 <th>Data da situação</th>
                 <th>Unidade Federativa</th>
+                <th>Atividade econômica</th>
             </tr>
         </thead>
     	</table>
@@ -45,10 +49,11 @@
 	<div class="chart_test" id="Q2">d</div>
 	<div class="chart_test" id="Q3">d</div>
 	<div class="chart_test" id="id_table">
-	<div class="chart_test" id="fechados">
+	<div class="chart_test" id="situacoes_linha">
     </table>
 	</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script> -->
+<script type="text/javascript" src="static/js/bootstrap.js"></script>
 </body>
 </html>
