--- a/estabelecimentos.html
+++ b/estabelecimentos.html
@@ -14,6 +14,7 @@
 	<script type="text/javascript" src="static/js/crossfilter.min.js"></script>
 	<script type="text/javascript" src="static/js/dc.js"></script>
 	<!-- <script type="text/javascript" src="https://unpkg.com/dc@4/dist/dc.js"></script> -->
+	<script src="static/js/topojson-client.js"></script>
 	<script type="text/javascript" src="static/js/main.js"></script>
 	<script type="text/javascript" src="static/js/estabelecimentos.js"></script>
 
