correção gráfico de situações

--- a/rede_socios.html
+++ b/rede_socios.html
@@ -74,8 +74,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<div class="chart_test" id="Q4"></div>
-	<div class="info legend" id="legend">
+	<div id="rede"></div>
+	<div class="info legend" id="legend_graph">
 		<i style="background:#a83252"></i> Jurídico<br/>
 		<i style="background:#7846eb"></i> Físico<br/>
 		<i style="background:#f5a364"></i> Estrangeiro<br/>
