--- a/estabelecimentos.html
+++ b/estabelecimentos.html
@@ -33,6 +33,8 @@
 	    	</div>
 	    	<div id="Q1" class="col-4"></div>
 			<div id="Q3" class="col-4"></div>
+			<div id="filter_situa"></div>
+
 		</div>
 		<div class='row full'>
 			<div id="Q2" class="col"></div>
