--- a/estabelecimentos.html
+++ b/estabelecimentos.html
@@ -22,11 +22,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<main role="main" class="container">
-		<div class="row full">
+	<div class="container-fluid">
+		<div class="row">
 	      <h3> Relatório sobre estabelecimentos</h3>
 	    </div>
-	    <div class='row full'>
+	    <div class='row'>
 	    	<div class="col-4">
 				<div id="Q11"></div>
 				<div id="situacoes_linha"></div>
@@ -36,10 +36,10 @@
 			<div id="filter_situa"></div>
 
 		</div>
-		<div class='row full'>
+		<div class='row'>
 			<div id="Q2" class="col"></div>
 		</div>
-	    <div class='row full'>
+	    <div class='row'>
 	    	<div id="paging">
 		        Showing <span id="begin"></span>-<span id="end"></span> of <span id="size"></span> <span id="totalsize"></span>
 		        <input id="last" class="btn" type="Button" value="Last" onclick="javascript:last()" />
@@ -61,7 +61,7 @@
 		        </thead>
 	    	</table>
 	    </div>
-	</main>
+	</div>
 
 
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script> -->
