criados menu de filtros e botão para resetar

--- a/estabelecimentos.html
+++ b/estabelecimentos.html
@@ -33,7 +33,7 @@
 	    	</div>
 	    	<div id="Q1" class="col-4"></div>
 			<div id="Q3" class="col-4"></div>
-			<div id="filter_situa"></div>
+			<!-- <div id="filter_situa"></div> -->
 
 		</div>
 		<div class='row'>
@@ -61,6 +61,17 @@
 		        </thead>
 	    	</table>
 	    </div>
+	    <span>
+            <a class="reset" href="javascript:resetar();" >
+            	Resetar
+            </a>
+    	</span>
+    	<div id="f1" class="filtro_buttom" onclick="clickFilter(this);"><img src="static/images/filter.png" title="Configurar filtros"></div>
+		<div id="df1" class = "filtro">
+			<div id="Q11F"></div>
+			<div id="filter_situa">Situação cadastral:</div>
+			<!-- <div id="select9">Cargo:</div> -->
+		</div>
 	</div>
 
 
