--- a/socios.html
+++ b/socios.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="static/css/dc.css">
 	<!-- <link rel="stylesheet" type="text/css" href="https://unpkg.com/dc@4/dist/style/dc.css"> -->
 	<link rel="stylesheet" type="text/css" href="static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="static/css/style_menu.css">
 
 
 	<script type="text/javascript" src="static/js/jquery-3.5.1.min.js"></script>
@@ -16,12 +17,26 @@
 	<!-- <script type="text/javascript" src="https://unpkg.com/dc@4/dist/dc.js"></script> -->
 	<script src="static/js/topojson-client.js"></script>
 	<script type="text/javascript" src="static/js/main.js"></script>
-	
+	<script type="text/javascript" src="static/js/menu.js"></script>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+	<nav class="nav-bar">
+		<div class="toggle-menu">
+		      <div class="line line1"></div>
+		      <div class="line line2"></div>
+		      <div class="line line3"></div>
+		    </div>
+		    <ul class="nav-list">
+		      <li class="nav-list-item"><a href="index.html" class="nav-link">Início</a></li>
+		      <li class="nav-list-item"><a href="empresas.html" class="nav-link">Empresas</a></li>
+		      <li class="nav-list-item"><a href="estabelecimentos.html" class="nav-link">Estabelecimentos</a></li>
+		      <li class="nav-list-item"><a href="socios.html" class="nav-link">Sócios</a></li>
+		      <li class="nav-list-item"><a href="contato.html" class="nav-link">Contato</a></li>
+		    </ul>
+	</nav>
 	<div id="main" class="container-fluid">
 	    <div class='row'>
 	    	<div class="col-6">
