--- a/empresas.html
+++ b/empresas.html
@@ -1,40 +1,38 @@
-<!DOCTYPE html>
 <html lang="pt-br">
 <head>
 	<title>VizRFB</title>
-	
+
 	<link rel="stylesheet" type="text/css" href="static/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="static/css/dc.css">
 	<link rel="stylesheet" type="text/css" href="static/css/style.css">
   <link rel="stylesheet" type="text/css" href="static/css/style_menu.css">
-
+  
 	<script type="text/javascript" src="static/js/jquery-3.5.1.min.js"></script>
 	<script type="text/javascript" src="static/js/d3.js"></script>
 	<script type="text/javascript" src="static/js/crossfilter.min.js"></script>
 	<script type="text/javascript" src="static/js/dc.js"></script>
-  <script type="text/javascript" src="static/js/menu.js"></script>
-	<script src="static/js/topojson-client.js"></script>
+	<script type="text/javascript" src="static/js/topojson-client.js"></script>
 
-  <script type="text/javascript" src="static/js/bootstrap.js"></script>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
-<nav class="nav-bar">
-        <div class="toggle-menu">
-          <div class="line line1"></div>
-          <div class="line line2"></div>
-          <div class="line line3"></div>
-        </div>
-        <ul class="nav-list">
-          <li class="nav-list-item"><a href="index.html" class="nav-link">Início</a></li>
-          <li class="nav-list-item"><a href="empresas.html" class="nav-link">Empresas</a></li>
-          <li class="nav-list-item"><a href="estabelecimentos.html" class="nav-link">Estabelecimentos</a></li>
-          <li class="nav-list-item"><a href="socios.html" class="nav-link">Sócios</a></li>
-          <li class="nav-list-item"><a href="contato.html" class="nav-link">Contato</a></li>
-        </ul>
-      </nav>
+
+  <div class="hamburger-menu">
+    <input id="menu__toggle" type="checkbox" />
+    <label class="menu__btn" for="menu__toggle">
+      <span></span>
+    </label>
+
+    <ul class="menu__box">
+      <li><a class="menu__item" href="index.html">Início</a></li>
+      <li><a class="menu__item" href="empresas.html">Empresas</a></li>
+      <li><a class="menu__item" href="estabelecimentos.html">Estabelecimentos</a></li>
+      <li><a class="menu__item" href="socios.html">Sócios</a></li>
+    </ul>
+  </div>
 
 <div class="container-fluid">
 <span class="display-qux"></span>
@@ -42,7 +40,7 @@
 
  <div class="col-4">  </div>
    <div class="col-4">  
-  	<h1 >Empresas ao Redor do Brasil</h1>
+  	<h2>Empresas ao Redor do Brasil</h2>
   </div>
   <div class="col-6">  </div>
 </div>
@@ -53,10 +51,10 @@
  </div>
 
  <div class="row">
-  <div class="col-3"></div>
-  <div id="Q8" class="col-3"></div>
-  <div id="Q7" class="col-3"></div>
-  <div class="col-3"></div>
+  <div class="col-2"></div>
+  <div id="Q8" class="col-4"></div>
+  <div id="Q7" class="col-4"></div>
+   <div class="col-2"></div>
  </div>
 
 
@@ -73,18 +71,15 @@
         <input id="last" class="btn" type="Button" value="Anterior" onclick="javascript:last()" />
         <input id="next" class="btn" type="button" value="Próxima" onclick="javascript:next()"/>
       </div>
-      <table id="tabela" class="table table-striped">
+      <table id="tabelaempresa" class="table table-striped">
             <thead>
                 <tr class="header">
                     <th>CNPJ Raiz</th>
-                    <th>CNPJ</th>
-                    <th>Nome</th>
-                    <th>Porte</th>
-                    <th>Início das atividades</th>
-                    <th>Sitação</th>
-                    <th>Data da situação</th>
+                    <th>Empresa</th>
                     <th>UF</th>
-                    <th>Atividade econômica</th>
+                    <th>Natureza Legal</th>
+                    <th>Total Capital</th>
+                    <th>Quantidade Sócios</th>
                 </tr>
             </thead>
         </table>
