--- a/rede_socios.html
+++ b/rede_socios.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="static/css/dc.css">
 	<!-- <link rel="stylesheet" type="text/css" href="https://unpkg.com/dc@4/dist/style/dc.css"> -->
 	<link rel="stylesheet" type="text/css" href="static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="static/css/style_menu.css">
 
 
 	<script type="text/javascript" src="static/js/jquery-3.5.1.min.js"></script>
@@ -74,6 +75,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
+	<div class="hamburger-menu">
+    	<input id="menu__toggle" type="checkbox" />
+    	<label class="menu__btn" for="menu__toggle">
+      		<span></span>
+    	</label>
+
+    <ul class="menu__box">
+      	<li><a class="menu__item" href="index.html">Início</a></li>
+     	<li><a class="menu__item" href="empresas.html">Empresas</a></li>
+     	<li><a class="menu__item" href="estabelecimentos.html">Estabelecimentos</a></li>
+     	<li><a class="menu__item" href="socios.html">Sócios</a></li>
+    </ul>
+	</div>
+
 	<div id="rede"></div>
 	<div class="info legend" id="legend_graph">
 		<i style="background:#a83252"></i> Jurídico<br/>
