--- a/empresas.html
+++ b/empresas.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="static/js/jquery-3.5.1.min.js"></script>
 	<script type="text/javascript" src="static/js/d3.js"></script>
 	<script type="text/javascript" src="static/js/crossfilter.min.js"></script>
-  <script type="text/javascript" src="static/js/main.min.js"></script>
+  <script type="text/javascript" src="static/js/main.js"></script>
 	<script type="text/javascript" src="static/js/dc.js"></script>
 	<script type="text/javascript" src="static/js/topojson-client.js"></script>
 
