--- a/empresas.html
+++ b/empresas.html
@@ -53,8 +53,8 @@
 
  <div class="row">
   <div class="col-2"></div>
-  <div id="Q8" class="col-4"></div>
-  <div id="Q7" class="col-4"></div>
+  <div id="Q8" class="col-4"><b>Quantidade de Sócios por Total de Capital</b></div>
+  <div id="Q7" class="col-4"><b>Proporção de Naturezas Legais de Empresas</b></div>
    <div class="col-2"></div>
  </div>
 
