consertado stackbar; adição porcentagem no piechart; consertado gráfico dos representantes

--- a/socios.html
+++ b/socios.html
@@ -48,10 +48,10 @@
 		</div>
 		<div class='row'>
 			<div class="col-6">
-				<div id="Q52"><b>Número de sócios por empresa</b> </div>
+				<div id="Q52"><b>Número de sócios por empresa e qualificações</b> </div>
 			</div>
 			<div class="col-6">
-				<div id="Q6"><b>Quantidade de sócios por tipo</b> </div>
+				<div id="Q6"><b>Qualificação dos representantes por tipo</b> </div>
 			</div>
 		</div>
 	</div>
