--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                               <a href="#dashboard"> <button type="button" class="btn btn-outline-primary" data-mdb-ripple-color="dark">Ver Dashboards</button></a>
                     </div>
  <div class="col-6">
-                      <img src="static/images/front.png" class="slider-sun" alt="slider image">
+                      <img src="static/images/front.PNG" class="slider-sun" alt="slider image">
 
                     </div>
                    
