--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               <div class="portfolio-info">
                 <h4>Dashboard de Estabelecimentos</h4>
                 <p>Ver</p>
-                  <a href="estabelecimentos.html" class="portfolio-lightbox" title="Dashboard Estabelecimentos"><i class="bx bx-link"></i></a>
+                  <a href="estabelecimentos.html" title="Dashboard Estabelecimentos"><i class="bx bx-link"></i></a>
                   
               </div>
             </div>
@@ -268,7 +268,7 @@
               <div class="portfolio-info">
                 <h4>Dashboard Sócios</h4>
                 <p>Ver</p>
-                  <a href="socios.html" class="portfolio-lightbox" title="Dashboard Sócios"><i class="bx bx-link"></i></a>
+                  <a href="socios.html" title="Dashboard Sócios"><i class="bx bx-link"></i></a>
                   
               </div>
             </div>
