--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   <div class='row'>      
               <div class="col-12">
   
-                      <img src="static/images/front.png" class="slider-sun" alt="slider image">
+                      <img src="static/images/front.PNG" class="slider-sun" alt="slider image">
                     </div>
                    
                     <!--<img src="" class="slider-hill" alt="slider image">-->
