--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <p>Ver</p>
 
                 <a href="socios.html" title="Dashboard Sócios"><i class="bx bx-link"></i></a>
-                
+
               </div>
             </div>
           </div>
@@ -301,7 +301,7 @@
                     </div>
                     <h4>Caio Viktor Silva Avila (UFC)</h4>
                         <p>Aluno de Doutorado (MDCC)</p>
-                        <p>(Knowledge Graphs / Linked Data </br>/ Semantic Web  / Chatbots).</p>
+                        <p>(Knowledge Graphs / Linked Data </br>/ Semantic Web  / Ontologies / Chatbots).</p>
                 </div>
                 <div class="col-lg-3 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
                     <div class="single-service">
@@ -310,7 +310,7 @@
                         </div>
                          <h4>Tulio Vidal Rolim (UFC)</h4>
                         <p>Aluno de Doutorado (MDCC)</p>
-                        <p>(Enterprise Knowledge Graphs / Linked Data </br> / Semantic Web / Ontologies).</p>
+                        <p>(Knowledge Graphs / Linked Data </br> / Semantic Web / Ontologies).</p>
                     </div>
                 </div>
 
